--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
             cursor: pointer;
         }
         .button.operator {
-            background-color: #f1c40f;
+            background-color: #00ff14;
         }
         .button.operator:hover {
-            background-color: #f39c12;
+            background-color: #00ff14;
         }
         .button:hover {
             background-color: #e0e0e0;
@@ -71,10 +71,10 @@
             <button class="button operator" onclick="calculateResult()">=</button>
             <button class="button operator" onclick="setOperator('+')">+</button>
 
-            <button class="button operator" onclick="setOperator('G')">G</button>
-            <button class="button operator"></button>
-            <button class="button operator"></button>
-            <button class="button operator"></button>
+            <button class="button operator" onclick="setOperator('T')">T</button>
+            <button class="button operator" onclick="setOperator('P')">P</button>
+            <button class="button operator" ></button>
+            <button class="button operator" ></button>
         </div>
     </div>
 
@@ -93,7 +93,7 @@
             firstOperand = currentInput;
             operator = op;
             currentInput = '';
-            if (op === 'G') {
+            if (['T', 'P'].includes(op)) {
                 calculateResult();
             }
         }
@@ -113,8 +113,11 @@
                 case '/':
                     result = parseFloat(firstOperand) / parseFloat(currentInput);
                     break;
-                case 'G':
+                case 'T':
                     result = (parseFloat(firstOperand) * 9/5) + 32;
+                    break;
+                case 'P': 
+                    result = parseFloat(firstOperand) / 1000;
                     break;
             }
             currentInput = result;
