--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <button class="button operator" onclick="setOperator('T')">T</button>
             <button class="button operator" onclick="setOperator('P')">P</button>
             <button class="button operator" onclick="setOperator('PR')">PR</button>
-            <button class="button operator"></button>
+            <button class="button operator" onclick="setOperator('M')">M</button>
         </div>
     </div>
 
@@ -93,7 +93,7 @@
             firstOperand = currentInput;
             operator = op;
             currentInput = '';
-            if (['T', 'P', 'PR'].includes(op)) {
+            if (['T', 'P', 'PR', 'M'].includes(op)) {
                 calculateResult();
             }
         }
@@ -121,6 +121,9 @@
                     break;
                 case 'PR': 
                     result = parseFloat(firstOperand) * 14.5038;
+                    break;
+                case 'M': 
+                    result = parseFloat(firstOperand) / 4000;
                     break;
             }
             currentInput = result;
