--- a/index.html
+++ b/index.html
@@ -48,6 +48,12 @@
     </style>
 </head>
 <body>
+    <div>
+        <h2>PROYECTO CALCULADORA</h2>
+    </div>
+    <div>
+        <h3>AUTOR: CAMILO CUATAPI</h3>
+    </div>
     <div class="calculator">
         <div id="display" class="display"></div>
         <div class="buttons">
